# UnigineTestTast

./: launch_debug.bat  launch_release.bat  unigine_project.project
data/: 1.spl  Bogie.node  NodeDummy_1.node  NodeDummy_2.node  Up_box.node  Up_cylingr.node  box.mesh  box_0.mesh  box_1.mesh  box_2.mesh  box_3.mesh  box_4.mesh  box_5.mesh  box_6.mesh  box_7.mesh  core.umount  cylinder.mesh  cylinder_0.mesh  editor.cache  exported_mesh.mesh  guids.db  material_ball.node  mesh_road.dds  plane_hi_poly.mesh  relsa.node  road_hi_poly.node  scripts.ung  unigine.cache  unigine_project.world  world_spline_graph.world  world_spline_graph_material.mat
data/.editor2/: .assemblytool
data/Rels_Strelka/TEST_OneMat_OneTex/: Strelka_1-11_LL_Beton_.node  Strelka_1-11_LR_Beton_.node  Strelka_1-11_RL_Beton_.node  Strelka_1-11_RR_Beton_.node  Strelka_1-22_LL_Beton_.node  (+22 more)
data/configs/: default.boot
include/: ComponentSystem.xml  Unigine.h  UnigineApp.h  UnigineApp.xml  UnigineAsyncQueue.xml  UnigineBase.h  UnigineBiMap.h  UnigineBounds.h  UnigineBounds.xml  UnigineCIGIConnector.xml  UnigineCallback.h  UnigineCamera.h  UnigineCamera.xml  UnigineChecksum.xml  UnigineCompress.h  UnigineCompress.xml  UnigineConfig.h  UnigineConfig.xml  UnigineConsole.h  UnigineConsole.xml  UnigineControls.h  UnigineControls.xml  UnigineCurve2d.h  UnigineCurve2d.xml  UnigineCustomApp.xml  UnigineDISConnector.xml  UnigineDecals.xml  UnigineDir.h  UnigineDir.xml  UnigineEditor.xml  UnigineEllipsoid.xml  UnigineEngine.h  UnigineEngine.xml  UnigineExport.h  UnigineExport.xml  UnigineFactory.h  UnigineFfp.xml  UnigineFileSystem.h  UnigineFileSystem.xml  UnigineGUID.xml  (+85 more)
include/plugins/: UnigineARTTracker.xml  UnigineAppEasyBlend.xml  UnigineAppOculus.h  UnigineAppOculus.xml  UnigineAppProjection.xml  UnigineAppVarjo.xml  UnigineAppVive.xml  UnigineAppWall.xml  UnigineGPUMonitor.xml  UnigineIG.xml  UnigineInterface.xml  UnigineKinect.h  UnigineKinect.xml  UnigineLeapMotion.h  UnigineSteam.xml  UnigineSyncker.xml  UnigineTeslaSuit.xml  UnigineVrpnClient.xml
lib/: EditorCore_x64.lib  EditorCore_x64d.lib
source/: AppEditorLogic.cpp  AppEditorLogic.h  AppSystemLogic.cpp  AppSystemLogic.h  AppWorldLogic.cpp  AppWorldLogic.h  Bogie.cpp  Bogie.h  CMakeLists.txt  Cart.cpp  Cart.h  PosOnRoad.cpp  PosOnRoad.h  Road.cpp  Road.h  Train.cpp  Train.h  main.cpp
(+837 files in other folders)
